--- a/FragmentSample/app/src/main/AndroidManifest.xml
+++ b/FragmentSample/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		  package="com.websarva.wings.android.fragmentsample">
+<manifest package="com.websarva.wings.android.fragmentsample"
+		  xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<application
 		android:allowBackup="true"
@@ -15,6 +15,8 @@
 
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
+		</activity>
+		<activity android:name=".MenuThanksActivity">
 		</activity>
 	</application>
 
