--- a/ConstraintLayoutSample/app/src/main/AndroidManifest.xml
+++ b/ConstraintLayoutSample/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.websarva.wings.android.constraintlayoutsample"
-		  xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+		  package="com.websarva.wings.android.constraintlayoutsample">
 
 	<application
 		android:allowBackup="true"
