--- a/CameraIntentSample/app/src/main/AndroidManifest.xml
+++ b/CameraIntentSample/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.websarva.wings.android.cameraintentsample"
 		  xmlns:android="http://schemas.android.com/apk/res/android">
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 	<application
 		android:allowBackup="true"
