--- a/AsyncSample/app/src/main/AndroidManifest.xml
+++ b/AsyncSample/app/src/main/AndroidManifest.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		  package="com.websarva.wings.android.asyncsample">
-
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	package="com.websarva.wings.android.asyncsample">
 
 	<application
 		android:allowBackup="true"
@@ -11,12 +8,12 @@
 		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
-		android:theme="@style/AppTheme">
-		<activity android:name=".WeatherInfoActivity">
+		android:theme="@style/Theme.AsyncSample">
+		<activity android:name=".MainActivity">
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
+				<action android:name="android.intent.action.MAIN" />
 
-				<category android:name="android.intent.category.LAUNCHER"/>
+				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
 	</application>
