--- a/CoordinatorLayoutSample/gradle/wrapper/gradle-wrapper.properties
+++ b/CoordinatorLayoutSample/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu Oct 19 15:45:38 JST 2017
+#Wed Dec 09 14:20:12 JST 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-bin.zip
