--- a/CameraIntentSample/app/src/main/AndroidManifest.xml
+++ b/CameraIntentSample/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.websarva.wings.android.cameraintentsample">
 
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
 	<application
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
@@ -11,7 +9,9 @@
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/Theme.CameraIntentSample">
-		<activity android:name=".MainActivity">
+		<activity
+			android:name=".MainActivity"
+			android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
