--- a/IntentSample/app/src/main/AndroidManifest.xml
+++ b/IntentSample/app/src/main/AndroidManifest.xml
@@ -9,8 +9,12 @@
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/Theme.IntentSample">
-		<activity android:name=".MenuThanksActivity"></activity>
-		<activity android:name=".MainActivity">
+		<activity
+			android:name=".MenuThanksActivity"
+			android:exported="false" />
+		<activity
+			android:name=".MainActivity"
+			android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
