--- a/IntentSample/app/src/main/AndroidManifest.xml
+++ b/IntentSample/app/src/main/AndroidManifest.xml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.websarva.wings.android.intentsample">
+	xmlns:tools="http://schemas.android.com/tools">
 
 	<application
 		android:allowBackup="true"
+		android:dataExtractionRules="@xml/data_extraction_rules"
+		android:fullBackupContent="@xml/backup_rules"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
-		android:theme="@style/Theme.IntentSample">
+		android:theme="@style/Theme.IntentSample"
+		tools:targetApi="31">
 		<activity
 			android:name=".MenuThanksActivity"
-			android:exported="false" />
+			android:exported="false">
+			<meta-data
+				android:name="android.app.lib_name"
+				android:value="" />
+		</activity>
 		<activity
 			android:name=".MainActivity"
 			android:exported="true">
@@ -20,6 +27,10 @@
 
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
+
+			<meta-data
+				android:name="android.app.lib_name"
+				android:value="" />
 		</activity>
 	</application>
 
