--- a/WebViewSample/app/src/main/AndroidManifest.xml
+++ b/WebViewSample/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	package="com.websarva.wings.android.webviewsample">
+	xmlns:tools="http://schemas.android.com/tools">
 
 	<uses-permission android:name="android.permission.INTERNET" />
 
@@ -23,6 +22,10 @@
 
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
+
+			<meta-data
+				android:name="android.app.lib_name"
+				android:value="" />
 		</activity>
 	</application>
 
